@@ -159,12 +159,6 @@ Specify the suffix of fonts extracted from the PDF file.
 Decompose ligatures. For example 'fi' -> 'f''i'.
 
 .TP
-.B --remove-unused-glyph <0|1> (Default: 0)
-If set to 1, remove unused glyphs in embedded fonts in order to reduce the file size.
-
-Currently this option is experimental, turning it on may cause segmentation fault or debris-like fonts.
-
-.TP
 .B --auto-hint <0|1> (Default: 0)
 If set to 1, hints will be generated for the fonts using fontforge. 
 
